Fix overflow-y

--- a/shopping-cart-project/src/components/ShopPage/ShopPage.css
+++ b/shopping-cart-project/src/components/ShopPage/ShopPage.css
@@ -7,22 +7,17 @@
     width: 100vw;
     height: 100vh;
     z-index: 15;
-    background-color: rgb(211, 255, 201);
-    overflow-y: scroll;
 }
 
 .shop-page-wrapper {
     display: grid;
     gap: 1rem;
-    background-color: #fff;
     padding: 1rem;
     height: 100%;
     width: 100%;
     grid-template-rows: auto auto 1fr;
-}
-
-.shop-header {
-    background-color: aqua;
+    overflow-y: scroll;
+    background-color: #fff;
 }
 
 .shop-categories {
@@ -31,12 +26,15 @@
 }
 
 .product-cards {
-    background-color: rgb(196, 196, 255);
     display: grid;
     gap: 1rem;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     height: 100%;
     width: 100%;
+}
+
+.category {
+    cursor: pointer;
 }
 
 @media (min-width: 500px) {
